syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

import "dex/token_pair_type.proto";

message PairMap {
  string pairId = 1;
  TokenPairType tokenPair = 2;
  int64 maxTick = 3;
  int64 minTick = 4;
}

