syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";
import "gogoproto/gogo.proto";

message Shares {
  string address = 1; 
  string pairId = 2; 
  int64 tickIndex = 3; 
  uint64 feeIndex = 4; 
  string sharesOwned = 5  [
      (gogoproto.moretags)   = "yaml:\"sharesOwned\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "sharesOwned"
  ]; 
  
}

